[package]
name = "proof-wellencryptedness-lwe"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
bellman = "0.14"
blsful = "3.0.0-pre7"
digest = "0.10"
elliptic-curve = "0.13"
elliptic-curve-tools = "0.1"
frodo-kem-rs = { version = "0.4", features = ["hazmat"] }
hex = "0.4"
hex-literal = "0.4"
pairing = "0.23"
rand_core = "0.6"
serdect = "0.3"
subtle = "2.6"
zeroize = "1"

[dev-dependencies]
rand_chacha = "0.3"
rand = "0.8.5"